kubernetes/infrastructure/test/traefik/ingress-route.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
spec:
  entryPoints:
    - websecure
  tls:
    secretName: traefik.${DOMAIN}
  routes:
    - kind: Rule
      match: Host(`traefik.${DOMAIN}`)
      services:
        - name: api@internal
          kind: TraefikService
    - kind: Rule
      match: Host(`traefik.${DOMAIN}`) &&  PathPrefix("/api")
      services:
        - name: api@internal
          kind: TraefikService
